--- a/contents/css/vars.less
+++ b/contents/css/vars.less
@@ -1,4 +1,6 @@
-@primary: #bdc3c7;
+//J:9E9E9E F:E91E63 M:8BC34A A:FFEB3B
+
+@primary: #607D8B;
 @secondary: darken(@primary, 15%);
 @white: #fff;
 @gray: #BDC3C7;
@@ -6,4 +8,4 @@
 @primary10: lighten(@primary, 10%);
 @primary20: lighten(@primary, 20%);
 
-@alt: darken(@primary, 10);
+@alt: spin(@primary, -40);
