--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -12,10 +12,10 @@ html(lang='en')
           = locals.name
       link(rel='alternate', href=locals.url+'/feed.xml', type='application/rss+xml', title=locals.description)
       link(rel='stylesheet', href='/css/github.css')
+      link(rel='stylesheet', href='/css/font-awesome.min.css')
       link(rel='stylesheet', href='/css/bootstrap.css')
       link(rel='stylesheet', href='/css/flat-ui.css')
       link(rel='stylesheet', href='/css/main.css')
-      link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css", rel="stylesheet")
       block addlocalcss
       link(rel="icon", type="image/png", href="/images/favicon.png")
       script(src='/js/highlight.pack.js')
@@ -93,3 +93,11 @@ html(lang='en')
         div.content-wrap
           section.copy
             p &copy; #{ new Date().getFullYear() } #{ locals.owner }
+    script.
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q || []).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-187360-2', 'auto');
+      ga('send', 'pageview');
+
