--- a/contents/css/main.less
+++ b/contents/css/main.less
@@ -163,7 +163,7 @@ h3 {
 
 .side-nav {
 	.btn {
-		width: 100%;
+		display: inline-block;
 		margin-bottom: 10px;
 		-moz-box-shadow: border-box;
 		box-sizing: border-box;
@@ -307,9 +307,15 @@ p.date {
 }
 
 .affix {
-	top: 0;
-	background-color: #ffffff;
-	width:  940px;
+	position: static;
+}
+
+@media (min-width: 992px) {
+	.affix {
+		position: fixed;
+		top: 60px;
+		max-width: 200px;
+	}
 }
 
 .show-example {
@@ -468,8 +474,6 @@ footer {
 	margin-bottom: 30px;
 	padding-top: 10px;
 	padding-bottom: 10px;
-	background-color: #f7f5fa;
-	border-radius: 5px;
 }
 
 .date {
@@ -741,9 +745,6 @@ img[src$="homework.png"] {max-width: 100%;}
 		}
 		&.side-nav {
 			width: 98%;
-			.affix {
-				position: static;
-			}
 			li {
 				float: left;
 				a {
@@ -770,7 +771,24 @@ img[src$="homework.png"] {max-width: 100%;}
 }
 
 .nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus {
-	background-color: @primary;
+	border-left: 2px solid @primary;
+	background-color: transparent;
+	color: @primary;
+	border-radius: 0;
+	font-weight: bold;
+}
+
+.nav>li>a {
+	border-left: 2px solid transparent;
+}
+.nav>li>a:hover, .nav>li>a:focus {
+	border-left: 2px solid @primary20;
+	background-color: transparent;
+	border-radius: 0;
+}
+
+.nav-stacked>li+li {
+	margin-top: 0;
 }
 
 @media screen and (max-width: 768px) {
@@ -827,9 +845,6 @@ img[src$="homework.png"] {max-width: 100%;}
 		}
 		&.side-nav {
 			width: 98%;
-			.affix {
-				position: static;
-			}
 			li {
 				float: none;
 				a {
