--- a/contents/css/github.less
+++ b/contents/css/github.less
@@ -1,125 +1,157 @@
 @import "vars";
 
-pre code {
-	display: block; padding: 0.5em;
-	color: #000;
-	background: #f8f8ff
+/*
+
+Monokai Sublime style. Derived from Monokai by noformnocontent http://nn.mit-license.org/
+
+*/
+
+.hljs {
+	display: block;
+	overflow-x: auto;
+	padding: 0.5em;
+	font-size: 1.2em;
+	background: #23241f;
+	-webkit-text-size-adjust: none;
 }
 
-pre .comment,
-pre .template_comment,
-pre .diff .header,
-pre .javadoc {
-	color: #998;
-	font-style: italic
+.hljs,
+.hljs-tag,
+.css .hljs-rules,
+.css .hljs-value,
+.aspectj .hljs-function,
+.css .hljs-function
+.hljs-preprocessor,
+.hljs-pragma {
+	color: #f8f8f2;
 }
 
-pre .keyword,
-pre .css .rule .keyword,
-pre .winutils,
-pre .javascript .title,
-pre .lisp .title,
-pre .subst {
-	color: #000;
-	font-weight: bold
+.hljs-strongemphasis,
+.hljs-strong,
+.hljs-emphasis {
+	color: #a8a8a2;
 }
 
-pre .number,
-pre .hexcolor {
-	color: #40a070
+.hljs-bullet,
+.hljs-blockquote,
+.hljs-horizontal_rule,
+.hljs-number,
+.hljs-regexp,
+.alias .hljs-keyword,
+.hljs-literal,
+.hljs-hexcolor {
+	color: #ae81ff;
 }
 
-pre .string,
-pre .tag .value,
-pre .phpdoc,
-pre .tex .formula {
-	color: #d14
+.hljs-tag .hljs-value,
+.hljs-code,
+.hljs-title,
+.css .hljs-class,
+.hljs-class .hljs-title:last-child {
+	color: #a6e22e;
 }
 
-pre .title,
-pre .id {
-	color: #900;
-	font-weight: bold
+.hljs-link_url {
+	font-size: 80%;
 }
 
-pre .javascript .title,
-pre .lisp .title,
-pre .subst {
-	font-weight: normal
+.hljs-strong,
+.hljs-strongemphasis {
+	font-weight: bold;
 }
 
-pre .class .title,
-pre .haskell .label,
-pre .tex .command {
-	color: #458;
-	font-weight: bold
+.hljs-emphasis,
+.hljs-strongemphasis,
+.hljs-class .hljs-title:last-child,
+.hljs-typename {
+	font-style: italic;
 }
 
-pre .tag,
-pre .tag .title,
-pre .rules .property,
-pre .django .tag .keyword {
-	color: @primary;
-	font-weight: normal
+.hljs-keyword,
+.ruby .hljs-class .hljs-keyword:first-child,
+.ruby .hljs-function .hljs-keyword,
+.hljs-function,
+.hljs-change,
+.hljs-winutils,
+.hljs-flow,
+.nginx .hljs-title,
+.tex .hljs-special,
+.hljs-header,
+.hljs-attribute,
+.hljs-symbol,
+.hljs-symbol .hljs-string,
+.hljs-tag .hljs-title,
+.hljs-value,
+.alias .hljs-keyword:first-child,
+.css .hljs-tag,
+.css .unit,
+.css .hljs-important {
+	color: #f92672;
 }
 
-pre .attribute,
-pre .variable,
-pre .instancevar,
-pre .lisp .body {
-	color: #008080
+.hljs-function .hljs-keyword,
+.hljs-class .hljs-keyword:first-child,
+.hljs-aspect .hljs-keyword:first-child,
+.hljs-constant,
+.hljs-typename,
+.css .hljs-attribute {
+	color: #66d9ef;
 }
 
-pre .regexp {
-	color: #009926
+.hljs-variable,
+.hljs-params,
+.hljs-class .hljs-title,
+.hljs-aspect .hljs-title {
+	color: #f8f8f2;
 }
 
-pre .class {
-	color: #458;
-	font-weight: bold
+.hljs-string,
+.css .hljs-id,
+.hljs-subst,
+.hljs-type,
+.ruby .hljs-class .hljs-parent,
+.hljs-built_in,
+.django .hljs-template_tag,
+.django .hljs-variable,
+.smalltalk .hljs-class,
+.django .hljs-filter .hljs-argument,
+.smalltalk .hljs-localvars,
+.smalltalk .hljs-array,
+.hljs-attr_selector,
+.hljs-pseudo,
+.hljs-addition,
+.hljs-stream,
+.hljs-envvar,
+.apache .hljs-tag,
+.apache .hljs-cbracket,
+.tex .hljs-command,
+.hljs-prompt,
+.hljs-link_label,
+.hljs-link_url {
+	color: #e6db74;
 }
 
-pre .symbol,
-pre .ruby .symbol .string,
-pre .ruby .symbol .keyword,
-pre .ruby .symbol .keymethods,
-pre .lisp .keyword,
-pre .tex .special,
-pre .input_number {
-	color: #990073
+.hljs-comment,
+.hljs-javadoc,
+.hljs-annotation,
+.hljs-decorator,
+.hljs-pi,
+.hljs-doctype,
+.hljs-deletion,
+.hljs-shebang,
+.apache .hljs-sqbracket,
+.tex .hljs-formula {
+	color: #75715e;
 }
 
-pre .builtin,
-pre .built_in,
-pre .lisp .title {
-	color: #0086b3
-}
-
-pre .preprocessor,
-pre .pi,
-pre .doctype,
-pre .shebang,
-pre .cdata {
-	color: #999;
-	font-weight: bold
-}
-
-pre .deletion {
-	background: #fdd
-}
-
-pre .addition {
-	background: #dfd
-}
-
-pre .diff .change {
-	background: #0086b3
-}
-
-pre .chunk {
-	color: #aaa
-}
-
-pre .tex .formula {
+.coffeescript .javascript,
+.javascript .xml,
+.tex .hljs-formula,
+.xml .javascript,
+.xml .vbscript,
+.xml .css,
+.xml .hljs-cdata,
+.xml .php,
+.php .xml {
 	opacity: 0.5;
 }
