Adding opacity on global nav on scroll

--- a/templates/index.jade
+++ b/templates/index.jade
@@ -9,6 +9,9 @@ block header
     h2= locals.startDate + " to " + locals.endDate
 
 block notes
+  if locals.note
+    div.container
+      div.alert.alert-danger= locals.note
   if locals.classnote
     div.container
       div.alert.alert-danger
