--- a/contents/css/main.less
+++ b/contents/css/main.less
@@ -84,6 +84,16 @@ h3 {
 	font-size: 1.5em;
 }
 
+.scroll {
+	.main-nav {
+		opacity: .8;
+		transition: all .5s;
+		&:hover {
+			opacity: 1;
+		}
+	}
+}
+
 .main-nav {
 	position: fixed;
 	z-index: 1000;
