--- a/contents/lessons/lesson-10/week10-final/site.css
+++ b/contents/lessons/lesson-10/week10-final/site.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font: 12px arial;
-    background-color: #FF0000;
+    background-color: #c0c0c0;
 }
 
 h1, h2, h3, h4, p, ul, li {
