--- a/contents/lessons/lesson-8/homework/site.css
+++ b/contents/lessons/lesson-8/homework/site.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #FF0000;
+	background-color: #c0c0c0;
 	font: 12px arial;
 }
 
@@ -68,5 +68,5 @@ figure img {
 	padding: 20px;
 	font-weight: bold;
 	text-align: right;
-	background-color: #FF0000;
+	background-color: #c0c0c0;
 }
