--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -16,8 +16,9 @@ html(lang='en')
       link(rel='stylesheet', href='/css/bootstrap.css')
       link(rel='stylesheet', href='/css/flat-ui.css')
       link(rel='stylesheet', href='/css/main.css')
+      link(rel='icon', sizes='192x192', href='/images/favicon.png')
+      meta(name='theme-color', content='#ffd740')
       block addlocalcss
-      link(rel="icon", type="image/png", href="/images/favicon.png")
       script(src='/js/highlight.pack.js')
       script(src='/js/jquery.min.js')
       script(src='/js/bootstrap.min.js')
