Adding new files for final

--- a/contents/css/vars.less
+++ b/contents/css/vars.less
@@ -1,6 +1,6 @@
-//J:9E9E9E F:E91E63 M:8BC34A A:FFEB3B
+//J:9E9E9E F:E91E63 M:8BC34A A:f1c40f
 
-@primary: #ffd740;
+@primary: #f1c40f;
 @secondary: darken(@primary, 15%);
 @white: #fff;
 @gray: #BDC3C7;
