--- a/contents/css/main.less
+++ b/contents/css/main.less
@@ -693,6 +693,7 @@ pre {
   margin: 0;
   padding: 0 !important;
   list-style: none;
+  height: 150px;
   &:after {
     display: block;
     content: "";
