Adding new lesson 7 files

--- a/contents/css/main.less
+++ b/contents/css/main.less
@@ -488,6 +488,8 @@ footer {
   border: 1px solid @secondary;
   padding: 10px;
   height: 100px;
+  background-color: silver;
+  margin-bottom: 20px;
 }
 
 .dateview(@offset: 20deg) {
