Adding lesson 8 files

--- a/templates/index.jade
+++ b/templates/index.jade
@@ -12,7 +12,7 @@ block notes
   if locals.note
     div.container
       div.alert.alert-danger= locals.note
-  if locals.classnote
+  if locals.classaction
     div.container
       div.alert.alert-danger
         p= locals.classnote + " "
