Update homepage styles

--- a/templates/index.jade
+++ b/templates/index.jade
@@ -16,7 +16,7 @@ block notes
     div.container
       div.alert.alert-danger
         p= locals.classnote + " "
-          a.btn.btn-xs(href=locals.classaction, target='_blank') Click Here
+          a.btn.btn-lg(href=locals.classaction, target='_blank') Click Here
 
 block content
   include author
