--- a/contents/css/main.less
+++ b/contents/css/main.less
@@ -144,14 +144,20 @@ h3 {
     margin-bottom: 0;
     background-color: @secondary;
     padding: 10px 20px;
+    display: -webkit-flex;
+    display: flex;
+    justify-content: space-between;
+    -webkit-justify-content: space-between;
     &.page-title {
+      display: -webkit-flex;
       display: flex;
+      -webkit-align-items: center;
       align-items: center;
+      -webkit-justify-content: space-between;
       justify-content: space-between;
       .date {
         font-size: 1.5em;
         color: white;
-        flex-basis: 160px;
         white-space: nowrap;
       }
     }
@@ -380,8 +386,53 @@ p.date {
 }
 
 .lesson-item {
+    padding: 0;
+    &:nth-of-type(3n) .well {
+        margin-right: 0;
+    }
   .well {
-    min-height: 265px;
+      padding: 1em;
+    min-height: 315px;
+    margin-bottom: 1em;
+    box-shadow: none;
+    border-radius: 0;
+    margin-right: 1em;
+
+    display: flex;
+    flex-direction: column;
+
+    header {
+        flex: 0;
+    }
+
+    section {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+
+        div {
+            margin: 1em 0;
+        }
+
+        p{
+            &:first-of-type {
+                flex: 1;
+                font-size: 2rem;
+                line-height: 1.5em;
+            }
+            &:empty {
+                display: none;
+            }
+            &:last-of-type {
+                margin: 0;
+                display: flex;
+                & > * {
+                    flex: 1;
+                }
+            }
+        }
+    }
+
     h2 {
       font-size: 4em;
       line-height: 1em;
@@ -403,10 +454,6 @@ p.date {
 }
 
 .lesson-item .more {
-  position: absolute;
-  bottom: 29px;
-  left: 29px;
-  right: 29px;
   a {
     color: @white;
   }
@@ -774,13 +821,17 @@ pre {
   {
     .well h2 {
       font-size: 1.5em;
-      margin-left: 60px;
       margin-bottom: 20px;
     }
   }
 }
 
 @media screen and (max-width: 992px) {
+
+
+    .lesson-item .well {
+        margin-right: 0;
+    }
   .nav.navbar-nav {
     font-size: .8em;
   }
