--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -22,7 +22,7 @@ html(lang='en')
       script(src='/js/highlight.pack.js')
       script(src='/js/jquery.min.js')
       script(src='/js/bootstrap.min.js')
-      script(src='/js/underscore.js')
+      script(src='/js/underscore-min.js')
       script(src='/js/global.js')
       block addlocaljs
   body(class=bodyclass)
