--- a/contents/css/vars.less
+++ b/contents/css/vars.less
@@ -1,6 +1,6 @@
 //J:9E9E9E F:E91E63 M:8BC34A A:f1c40f
 
-@primary: #E91E63;
+@primary: #8BC34A;
 @secondary: darken(@primary, 15%);
 @white: #fff;
 @gray: #BDC3C7;
