--- a/templates/article.jade
+++ b/templates/article.jade
@@ -7,7 +7,8 @@ block addlocalcss
 
 block addlocaljs
   if page.metadata.localjs
-    script(src=page.metadata.localjs)
+    each script in page.metadata.localjs
+      script(src=script)
 
 block append vars
   - bodyclass = 'article-detail'
@@ -48,5 +49,3 @@ block content
                     code #{tag}:&#123;&#125;
                   if val.label == "attribute"
                     code "#{tag}"
-
-
