--- a/contents/css/main.less
+++ b/contents/css/main.less
@@ -809,9 +809,6 @@ pre {
   }
 }
 
-//iPhone < 5:
-@media screen and (device-aspect-ratio: 2/3) {}
-
 @media screen and (max-width: 1200px) {
   .lesson-item {
     .well h2 {
@@ -833,11 +830,9 @@ pre {
 }
 
 @media screen and (max-width: 992px) {
-
-
-    .lesson-item .well {
-        margin-right: 0;
-    }
+  .lesson-item .well {
+      margin-right: 0;
+  }
   .nav.navbar-nav {
     font-size: .8em;
   }
@@ -857,7 +852,17 @@ pre {
 
   .main-level {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
+    .nav > li {
+      a{
+        padding: 0 1em 0 0;
+      }
+      &.active {
+        a {
+          border: none;
+        }
+      }
+    }
     .main-side-nav {
       display: flex;
     }
