--- a/contents/css/_components/markdowned.less
+++ b/contents/css/_components/markdowned.less
@@ -19,12 +19,22 @@
     font-size: 4em;
     margin: .3em 0 1em;
     font-weight: 300;
+    @media only screen
+    and (max-width : 768px) {
+      font-size: 3em;
+      margin: 0;
+    }
   }
   h2 {
     color: #27ae4a;
     font-size: 1.8em;
     line-height: 1.8;
     font-weight: 700;
+    @media only screen
+    and (max-width : 768px) {
+      font-size: 1.5em;
+      margin: 0;
+    }
   }
   h3 {
     font-size: 1.5em;
