--- a/contents/css/_components/tags.less
+++ b/contents/css/_components/tags.less
@@ -3,6 +3,10 @@
   padding: .5em 1em;
   background-color: #FAFAFA;
   border-radius: .4em;
+  @media only screen
+  and (max-width : 600px) {
+    display: none;
+  }
   &__item {
     padding: .3em 0;
     &:not(:last-of-type) {
