--- a/contents/css/_components/brand.less
+++ b/contents/css/_components/brand.less
@@ -20,9 +20,7 @@
       width: 287.5px;
       height: 87.5px;
       @media only screen
-      and (min-device-width : 768px)
-      and (max-device-width : 1024px)
-      and (orientation : portrait) {
+      and (max-width : 1024px) {
         width: 115px;
         height: 35px;
       }
