--- a/contents/css/_components/downloads.less
+++ b/contents/css/_components/downloads.less
@@ -2,7 +2,24 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  @media only screen
+  and (max-width : 600px) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 1em;
+  }
+  @media only screen
+  and (max-width : 414px) {
+    display: none;
+  }
   &__item {
     margin-bottom: 2px;
+    @media only screen
+    and (max-width : 600px) {
+      .btn {
+        width: 100%;
+        box-sizing: border-box;
+      }
+    }
   }
 }
