--- a/contents/css/_components/sidenav.less
+++ b/contents/css/_components/sidenav.less
@@ -2,8 +2,69 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  &__item {
+  @media only screen
+  and (min-width : 415px) {
+    .trigger {
+      display: none;
+    }
+  }
+  @media only screen
+  and (max-width : 414px) {
+    .trigger {
+      font-size: 3em;
+      position: absolute;
+      top: 64px;
+      left: 70vw;
+      padding: 1px 5px 5px 4px;
+      background-color: @alt;
+      box-shadow: 3px 1px 10px -4px #000;
+      z-index: -1;
+      line-height: 1em;
+      color: @white;
+      transition: .2s all;
+      &.hide {
+        margin-left: -22px;
+        box-shadow: -10px 1px 10px -4px #000;
+      }
+    }
+  }
 
+  @media only screen
+  and (max-width : 600px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -1em -1em 1em;
+    border-bottom: 1px solid @primary;
+    justify-content: space-around;
+  }
+  @media only screen
+  and (max-width : 414px) {
+    display: list-item;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    background-color: @alt;
+    width: 70vw;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    margin-left: -70vw;
+    transition: .2s all;
+    &.active {
+      box-shadow: -10px 2px 10px 10px;
+      margin-left: 0;
+    }
+  }
+  &__item {
+    @media only screen
+    and (max-width : 414px) {
+      border-bottom: 1px solid @primary20;
+      font-size: 1.5em;
+      flex: 1;
+      display: flex;
+      align-items: center;
+    }
   }
   &__link {
     display: block;
@@ -11,9 +72,24 @@
     text-decoration: none;
     color: @primary;
     border-left: 2px solid transparent;
-    &:hover {
-      border-left-color: @primary10;
-      color: @primary10;
+    @media only screen
+    and (max-width : 600px) {
+      padding: .5em;
+    }
+    @media only screen
+    and (min-width : 600px) {
+      &:hover {
+        border-left-color: @primary10;
+        color: @primary10;
+      }
+    }
+    @media only screen
+    and (max-width : 414px) {
+      padding: .5em 1em;
+      color: @white;
+      text-shadow: 0 1px 1px rgba(0,0,0,.5);
+      &::after { content:" \203A";}
+      flex: 1;
     }
   }
 }
