--- a/contents/css/_components/titlebar.less
+++ b/contents/css/_components/titlebar.less
@@ -5,21 +5,35 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-shadow: ;
   box-shadow:
     0 5px 10px -6px rgba(0, 0, 0, 0.5) inset,
     0 1px 1px rgba(0,0,0,.05) inset
   ;
+  @media only screen
+  and (max-width : 414px) {
+    padding-left: 30px;
+  }
+  @media only screen
+  and (max-width: 600px)  {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 
   &__main {
     margin: 0;
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 300;
-    font-size: 2.2em;
+    @media only screen
+    and (min-width: 600px)  {
+      font-size: 2.2em;
+    }
   }
   &__date {
     margin: 0;
-    font-size: 1.2em;
-    font-weight: 700;
+    @media only screen
+    and (min-width: 600px)  {
+      font-size: 1.2em;
+      font-weight: 700;
+    }
   }
 }
