--- a/templates/layout.jade
+++ b/templates/layout.jade
@@ -46,7 +46,7 @@ html(lang='en')
                 ul.header-nav__dropdown
                   - var navItem = 0;
                   while navItem < locals.totalItems
-                    li.header-nav__drop-item <a href="/lessons/lesson-#{navItem + 1}/">Lesson #{navItem+ 1}</a>
+                    li.header-nav__drop-item <a href="/lessons/lesson-#{navItem + 1}/index.html">Lesson #{navItem+ 1}</a>
                     -navItem++
               li.header-nav__item
                 a(href="/syllabus.html").header-nav__link
