--- a/contents/css/_components/article.less
+++ b/contents/css/_components/article.less
@@ -30,7 +30,7 @@
       padding: 1em;
     }
     @media only screen
-    and (max-width : 414px) {
+    and (max-width : 425px) {
       padding: 1em 1em 1em 30px;
     }
   }
@@ -38,11 +38,18 @@
     grid-area: s;
     padding: 2em 0;
     @media only screen
+    and (min-width : 601px) {
+      position: relative;
+      .side-nav-inner {
+        position: fixed;
+      }
+    }
+    @media only screen
     and (max-width : 768px) {
       padding: 1em 1em 0;
     }
     @media only screen
-    and (max-width : 414px) {
+    and (max-width : 425px) {
       padding: 0;
     }
   }
