--- a/contents/css/main.less
+++ b/contents/css/main.less
@@ -20,6 +20,10 @@ body {
   line-height: 1.42857143;
 }
 
+a {
+  color: @primary;
+}
+
 .container {
   display: flex;
   justify-content: center;
@@ -109,7 +113,7 @@ code {
       grid-auto-rows: 230px;
     }
     @media only screen
-    and (max-width: 414px) {
+    and (max-width: 425px) {
       background-color: red;
     }
   }
