* Move title to YAML * Remove most JS pages calls * change color

--- a/contents/css/_components/header-nav.less
+++ b/contents/css/_components/header-nav.less
@@ -1,3 +1,4 @@
+@import "../vars.less";
 .header-nav {
   align-self: center;
   @media only screen
@@ -28,7 +29,7 @@
   }
   &__item {
     &:hover {
-      background-color: #60db94;
+      background-color: @primary20;
       .header-nav__dropdown {
         @media only screen
         and (min-width : 769px) {
