--- a/contents/css/_components/layout.less
+++ b/contents/css/_components/layout.less
@@ -1,3 +1,4 @@
+@import "../vars.less";
 .layout {
   display: flex;
   margin: 0;
@@ -6,7 +7,7 @@
   &__item {
 
   }
-  &--date {    
+  &--date {
     > *:first-of-type {
       margin-right: .5em;
     }
