--- a/contents/css/_components/article.less
+++ b/contents/css/_components/article.less
@@ -4,13 +4,12 @@
   grid-template-areas:
     "p p p p p p p p p s s s";
   grid-column-gap: 1em;
-  @media only screen
-  and (max-width : 768px) {
+  &--single {
     grid-template-areas:
-      "p p p p p p p p s s s s";
+      "p p p p p p p p p p p p";
   }
   @media only screen
-  and (max-width : 600px) {
+  and (max-width : 768px) {
     grid-template-columns: 1fr;
     grid-template-areas:
       "s"
@@ -18,7 +17,7 @@
   }
   h3 {
     @media only screen
-    and (max-width : 600px) {
+    and (max-width : 768px) {
       display: none;
     }
   }
@@ -38,10 +37,11 @@
     grid-area: s;
     padding: 2em 0;
     @media only screen
-    and (min-width : 601px) {
+    and (min-width : 769px) {
       position: relative;
-      .side-nav-inner {
+      .side-nav-inner.fixed {
         position: fixed;
+        top: 1em;
       }
     }
     @media only screen
