--- a/contents/css/_components/brand.less
+++ b/contents/css/_components/brand.less
@@ -1,15 +1,16 @@
+@import "../vars.less";
 .brand {
   &__svg {
     width: 115px;
     height: 35px;
     .slash {
-      fill: #60db94;
+      fill: @primary20;
     }
     .tag {
-      fill: #cccccc;
+      fill: @gray5;
     }
     .letter {
-      fill: #ffffff;
+      fill: @white;
     }
   }
 }
