--- a/contents/css/_components/markdowned.less
+++ b/contents/css/_components/markdowned.less
@@ -1,3 +1,4 @@
+@import "../vars.less";
 .article__primary {
   h1, h2, h3, h4, h5, h6 {
     font-family: 'Roboto Condensed', sans-serif;
@@ -9,11 +10,14 @@
       }
     };
   }
+  img {
+    max-width: 100%;
+  }
   hr {
     margin-top: 20px;
     margin-bottom: 20px;
     border: 0;
-    border-top: 1px solid #eee;
+    border-top: 1px solid @gray15;
   }
   h1 {
     font-size: 4em;
@@ -26,7 +30,7 @@
     }
   }
   h2 {
-    color: #27ae4a;
+    color: @primary10;
     font-size: 1.8em;
     line-height: 1.8;
     font-weight: 700;
@@ -64,14 +68,6 @@
     white-space: pre-wrap;
     background-color: transparent;
     border-radius: 0;
-  }
-  code {
-    color: #27ae60;
-    background-color: #ddf7e8;
-    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-    padding: 2px 6px;
-    font-size: .9em;
-    border-radius: .2em;
   }
   table {
     border-collapse: collapse;
