--- a/contents/css/_components/tags.less
+++ b/contents/css/_components/tags.less
@@ -1,10 +1,11 @@
+@import "../vars.less";
 .tags {
   border: 1px solid silver;
   padding: .5em 1em;
   background-color: #FAFAFA;
   border-radius: .4em;
   @media only screen
-  and (max-width : 600px) {
+  and (max-width : 768px) {
     display: none;
   }
   &__item {
