--- a/contents/css/_components/titlebar.less
+++ b/contents/css/_components/titlebar.less
@@ -1,3 +1,4 @@
+@import "../vars.less";
 .titlebar {
   padding: .3em 1em;
   color: @white;
@@ -14,7 +15,7 @@
     padding-left: 30px;
   }
   @media only screen
-  and (max-width: 600px)  {
+  and (max-width: 425px)  {
     flex-direction: column;
     align-items: flex-start;
   }
@@ -24,14 +25,14 @@
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 300;
     @media only screen
-    and (min-width: 600px)  {
+    and (min-width: 425px)  {
       font-size: 2.2em;
     }
   }
   &__date {
     margin: 0;
     @media only screen
-    and (min-width: 600px)  {
+    and (min-width: 425px)  {
       font-size: 1.2em;
       font-weight: 700;
     }
