* Clean up Less files * Move title format to Mixin

--- a/contents/css/vars.less
+++ b/contents/css/vars.less
@@ -1,6 +1,6 @@
 //J:9E9E9E F:E91E63 M:8BC34A A:f1c40f
 
-@primary: #9E9E9E;
+@primary: #27ae60;
 @secondary: darken(@primary, 15%);
 @white: #fff;
 @gray: #BDC3C7;
@@ -12,4 +12,4 @@
 @primary10: lighten(@primary, 10%);
 @primary20: lighten(@primary, 20%);
 
-@alt: spin(@primary, -30);
+@alt: spin(@primary, -20);
