--- a/contents/css/main.less
+++ b/contents/css/main.less
@@ -13,6 +13,9 @@
 @import url(./_components/downloads.less);
 @import url(./_components/tags.less);
 @import url(./_components/badge.less);
+@import url(./_components/grid.less);
+@import url(./_components/lesson.less);
+@import url(./_components/utils.less);
 
 body {
   margin: 0;
@@ -104,217 +107,4 @@ code {
   padding: 1px 5px;
   font-size: .9em;
   border-radius: .2em;
-}
-
-.grid {
-  display: grid;
-  &--homepage {
-    grid-gap: 1em;
-    margin: 1em;
-    @media only screen
-    and (min-width: 768px)  {
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 300px;
-      grid-auto-rows: 300px;
-    }
-    @media only screen
-    and (max-width : 1024px) {
-      grid-template-rows: 230px;
-      grid-auto-rows: 230px;
-    }
-  }
-}
-
-.lesson {
-  padding: 1em;
-  box-shadow: none;
-  display: flex;
-  flex-direction: column;
-  background-color: #f5f5f5;
-  border: 1px solid #e3e3e3;
-  &__title {
-    margin: 0;
-    line-height: 1em;
-    @media only screen
-    and (max-width : 768px) {
-      font-size: 1.3em;
-    }
-  }
-  &__link {
-    text-decoration: none;
-    color: @primary;
-    font-size: 2em;
-    font-weight: 700;
-    line-height: 1em;
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-  &__date {
-    color: @primary;
-  }
-  &__content {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    p {
-      &:first-of-type {
-        flex: 1;
-      }
-      &:last-of-type {
-        margin: 0;
-      }
-      &:empty {
-        display: none;
-      }
-    }
-    > div {
-      margin: .5em 0;
-    }
-  }
-  &__button {
-    width: 100%;
-    box-sizing: border-box;
-  }
-}
-
-.burger {
-  display: none;
-  @media only screen
-  and (max-width : 768px) {
-    display: inline-block;
-  }
-  &.active {
-    padding: 10px 4px;
-    .line {
-      margin: 0;
-      &:nth-of-type(1) {
-        transform: rotate(45deg) translate(-2px,0px);
-        width: 17px;
-        position: relative;
-        top: 2px;
-        left: 1px;
-      }
-      &:nth-of-type(2) {
-        opacity: 0;
-      }
-      &:nth-of-type(3) {
-        transform: rotate(-45deg) translate(1px,-4px);
-        width: 17px;
-        position: relative;
-        top: 2px;
-        left: 1px;
-      }
-    }
-  }
-  transition: all .2s;
-  border: 1px solid @white;
-  padding: 4px;
-  border-radius: 3px;
-  width: 25px;
-  box-sizing: border-box;
-  .display {
-    display: none;
-  }
-  .line {
-    transition: all .2s;
-    border-bottom: 1px solid @white;
-    margin-bottom: 3px;
-    &:last-of-type {
-      margin-bottom: 0;
-    }
-  }
-}
-
-.homework-view {
-  display: flex;
-  border-top: 1px solid @alt;
-  border-bottom: 1px solid @alt;
-
-  margin-top: 10px;
-  margin-bottom: 10px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-
-  .img-circle {
-    border-radius: 50%;
-  }
-
-  h2 {
-    margin-top: 0;
-  }
-
-  div {
-    margin-right: 20px;
-    &:first-child {
-      max-width: 150px;
-      img {
-        max-width: 100%;
-        border: 2px solid gray;
-      }
-    }
-  }
-}
-
-.hasSwatches {
-  margin: 0;
-  padding: 0 !important;
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  &:after {
-    display: block;
-    content: "";
-    clear: both;
-  }
-  li {
-    background-color: #fff;
-    margin-left: .3em;
-    margin-bottom: .3em;
-
-    .swatchWrapper {
-      height: 140px;
-      .swatchColor{
-        width: 100px;
-        height: 100px;
-        border: 1px solid silver;
-      }
-      .swatchLabel {
-        transition: all .1s;
-        position: relative;
-        top: 0;
-        margin: 5px 0 0;
-        text-align: center;
-        font-family: Courier New;
-      }
-      &:hover {
-        .swatch {
-          transform: scale(1.1);
-          box-shadow: 0 5px 10px rgba(0,0,0,.1);
-          .swatchColor {
-            height: 128px;
-            margin-bottom: -34px;
-          }
-          .swatchLabel {
-            top: -2.8em;
-            font-size: 1.2em;
-            text-shadow: 0 1px 0 rgba(255,255,255,.3);
-            font-weight: bold;
-          }
-        }
-      }
-    }
-    .swatch {
-      background-color: #fff;
-      border: 1px solid silver;
-      padding: .3em;
-      transition: all .2s;
-    }
-    .smSwatch {
-      .swatchColor {
-        font-family: Courier New;
-        padding: .2em;        
-      }
-    }
-  }
 }
