--- a/templates/index.jade
+++ b/templates/index.jade
@@ -1,14 +1,14 @@
 extends layout
 
+include mixins/_title
+
 block append vars
   - bodyclass = 'homepage'
 
 block header
   div.titlebar
-    - const [first, ...rest] = locals.description.split(' ')
     h1.titlebar__main
-      span.caps= first
-      = ` ${rest}`
+      +title(locals.description)
     p.titlebar__date= locals.startDate + " to " + locals.endDate
 
 block notes
@@ -27,7 +27,8 @@ block content
       article.lesson
         .lesson__header
           h2.lesson__title
-            a(href=article.url).lesson__link= article.title
+            a(href=article.url).lesson__link
+              +title(article.title)
           ul.layout.layout--date.lesson__date
             li.layout__item
               i.fa.fa-calendar
