--- a/contents/css/_components/sidenav.less
+++ b/contents/css/_components/sidenav.less
@@ -75,6 +75,9 @@
     text-decoration: none;
     color: @primary;
     border-left: 2px solid transparent;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     @media only screen
     and (max-width : 768px) {
       padding: .5em;
