add mixin for logo

--- a/contents/css/_components/brand.less
+++ b/contents/css/_components/brand.less
@@ -18,10 +18,12 @@
 .homepage {
   .brand {
     &__svg {
-      width: 287.5px;
-      height: 87.5px;
+      margin-top: 5px;
+      width: 108px;
+      height: 30px;
       @media only screen
       and (max-width : 1024px) {
+        margin-top: 5px;
         width: 115px;
         height: 35px;
       }
