--- a/contents/css/_components/article.less
+++ b/contents/css/_components/article.less
@@ -22,6 +22,7 @@
   }
   &__primary {
     padding: 2em 1em;
+    grid-area: p;
     @media only screen
     and (max-width : 768px) {
       padding: 1em;
@@ -33,6 +34,7 @@
   }
   &__secondary {
     padding: 2em 0;
+    grid-area: s;    
     @media only screen
     and (min-width : 769px) {
       position: relative;
