--- a/contents/css/_components/markdowned.less
+++ b/contents/css/_components/markdowned.less
@@ -71,15 +71,15 @@
   }
   table {
     border-collapse: collapse;
-    border: 1px solid #e7e7e7;
+    border: 1px solid @gray10;
     th, td {
-      border-bottom: 1px solid #e7e7e7;
+      border-bottom: 1px solid @gray10;
       text-align: left;
       padding: .5em 1em;
     }
     th {
       border-bottom-width: 2px;
-      color: #27ae4a;
+      color: @primary;
     }
   }
 }
